<resources>
    <string name="app_name">Project3_BackendTest</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testing_out_some_display_stuff">Testing out some display stuff</string>
    <string name="lime">lime</string>
    <string name="mango">mango</string>
    <string name="kiwi">kiwi</string>
    <string name="last_update">Last Update:</string>
    <string name="vin">Vin:</string>
    <string name="car_description">car description</string>
    <string name="_0_00">$ 0.00</string>
    <string name="make_model">Make - Model</string>
    <string name="image_of_listed_car">image of listed car</string>
</resources>